# smo2_plateau_detection

./: .gitignore  README.md  pyproject.toml
src/smo2_plateau_detection/: __init__.py  calculate_criteria.py  main.py  plateau_detection.py  plot.py  plot_mean_sd.py
