[project]
name = "smo2-plateau-detection"
version = "0.1.0"
description = "Methods for automatic plateau detection in SmO2 signals from NIRS devices"
readme = "README.md"
authors = [{ name = "Kaszanas", email = "andrzej.bialecki94@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pingouin>=0.5.5",
    "scikit-posthocs>=0.11.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = ["ruff>=0.9.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["I"]
